--- a/Final/index.html
+++ b/Final/index.html
@@ -18,8 +18,7 @@
             <div class="col-12">
                 <div class="item">
                     <header>
-                        <img src="https://s.yimg.com/ny/api/res/1.2/sHwrC7KVbJN4jl6sz5nMig--/YXBwaWQ9aGlnaGxhbmRlcjt3PTk2MDtoPTY0MDtjZj13ZWJw/https://s.yimg.com/uu/api/res/1.2/FxZaLxwVhAz77qig4.LeTQ--~B/aD01MzM7dz04MDA7YXBwaWQ9eXRhY2h5b24-/https://media.zenfs.com/en/petsmao_nownews_707/147a10d062be26a23e5d8b13b48e91fe.jpg"
-                            alt="圖片" />
+                        <img src="https://udn.com/news/story/7470/5658731.jpg" alt="圖片" />
                         <div style="background-color:#66ffe6;">
                             <ul class="list-inline">
                                 <li class="list-inline-item"><a href="https://zh.wikipedia.org/zh-tw/%E7%8A%AC">貓</a></li>
