--- a/Final/index.html
+++ b/Final/index.html
@@ -78,7 +78,7 @@
                                 <div class="content">
                                     <div class="title">使用者留言~喵</div>
                                     <div class="message_box" id="messageBox"></div>
-                                    <div><input id="myInput" type="text" placeholder="請輸入留言類容"><button id="doPost">提交</button></div>
+                                    <div><input id="myInput" type="text" placeholder="請輸入留言內容"><button id="doPost">提交</button></div>
                                 </div>
                             </ul>
                             </table>
@@ -95,7 +95,7 @@
                                 <div class="content">
                                     <div class="title">使用者留言~喵</div>
                                     <div class="message_box" id="messageBox"></div>
-                                    <div><input id="myInput" type="text" placeholder="請輸入留言類容"><button id="doPost">提交</button></div>
+                                    <div><input id="myInput" type="text" placeholder="請輸入留言內容"><button id="doPost">提交</button></div>
                                 </div>
                             </ul>
                             </table>
