--- a/Final/index.html
+++ b/Final/index.html
@@ -42,7 +42,7 @@
 </head>
 
 <body>
-    <h1><a href="http://127.0.0.1:5500/Final/smile.html">1頁</a></h1>
+    <h1><a href="http://b11056011.github.io/Final/smile.html">1頁</a></h1>
     <h1><a href="https://b11056011.github.io/Final/index.html">2頁</a></h1>
     <div class="container">
         <div class="row">
