--- a/Final/smile.html
+++ b/Final/smile.html
@@ -2,6 +2,11 @@
 <html lang="en">
 
 <head>
+
+
+
+
+
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -43,9 +48,10 @@
 
 <body>
 
+
     </div>
     <h1><a href="smile.html">1頁</a></h1>
-    <h1><a href="https://b11056011.github.io/Final/index.html">2頁</a></h1>
+    <h1><a href="index.html">2頁</a></h1>
     <div class="container">
         <div class="row">
             <div class="col-12">
