--- a/Final/neko.html
+++ b/Final/neko.html
@@ -81,9 +81,10 @@
                         </aside>
                     </header>
                     <br>
+                    <h1><a href="index.html">1頁</a></h1>
                     <h1><a href="smile.html">2頁</a></h1>
-                    <h1><a href="neko.html">3頁</a></h1>
                     <h1><a href="koko.html">4頁</a></h1>
+
 
                     <footer>
                         <aside>
