--- a/Final/index.html
+++ b/Final/index.html
@@ -51,20 +51,22 @@
                 <div class="item">
                     <header>
 
-                        <h1>
-                            <div style="border-width:3px;border-style:solid;border-radius:10px;padding:10px;border-color:#FFAC55;width: 310px; height: 70px;">
-                                <li class="list-inline-item" style="color:#49f4d7;">爺爺與喵的小玉</li>
-                            </div>
-                        </h1>
 
-                        <div style="border-width:3px;border-style:solid;border-radius:10px;padding:10px;border-color:#eded47;">
-                            <h1 style="color:#49f4d7">摸我~喵</h1>
+
+                        <div style="border-width:3px;border-style:solid;border-radius:10px;padding:10px;border-color:#eded47;background: linear-gradient(#fe9f40,#ffffff)">
+                            <h1>
+
+                                <li class="list-inline-item" style="color:#000000;">爺爺與喵的小玉</li>
+                                <h1 style="color:#dde7e5">摸我~喵</h1>
+
+                            </h1>
+
                             <a href="https://www.youtube.com/watch?v=5hgrYnLRiBE"><img src="https://im.marieclaire.com.tw/s805c452h100b0/assets/mc/201904/5CB4AAE0E0A101555344096.jpeg" alt="圖片" style="width: 400px; height: 400px;" /></a>
                             <a href=" https://www.youtube.com/watch?v=ZrcN1GDnHPo"><img src="https://im.marieclaire.com.tw/m800c533h100b0/assets/mc/201904/5CB4A75B9644A1555343195.jpeg" alt="圖片" style="width: 400px; height: 400px;" /></a>
                         </div>
 
                         <aside>
-                            <div style="border-width:3px;border-style:solid;border-radius:10px;padding:20px;border-color:#FFAC55;">
+                            <div style="border-width:3px;border-style:solid;border-radius:10px;padding:20px;border-color:#ebeb0b;background: linear-gradient(#ffffff,#fe9f40)">
 
 
                                 <ul>
@@ -81,20 +83,17 @@
                         </aside>
                     </header>
                     <br>
-                    <h1><a href="smile.html">2頁</a></h1>
-                    <h1><a href="neko.html">3頁</a></h1>
-                    <h1><a href="koko.html">4頁</a></h1>
-
+                    <h3><button style="background: linear-gradient(#fe9f40,#e5d6c7,#111010);border-color:#f7a014"><a href="smile.html" style="color:#000000;">第2頁  </a></button> <a href="neko.html" style="color:#000000;">第3頁  </a> <a href="koko.html" style="color:#000000;">第4頁  </a>                        </h3>
+                    <h3></h3>
+                    <h3></h3>
+                    <br>
                     <footer>
                         <aside>
                             <div style="border-width:3px;border-style:solid;border-radius:10px;padding:0px;border-color:#FFAC55;">
 
                                 <div style="background: linear-gradient(#fe9f40,#ffffff);">
-                                    <h1>貓咪金句</h1><br>
-                                    <p>柔情似水的一聲喵，溫暖了滿心房</p><br>
-                                    <p>你可以養狗當寵物。但對貓來說，人才是寵物，因為人類是種極有用的動物</p><br>
-                                    <p>沒有貓的屋子，稱不上家</p><br>
-                                    <p>貓不屬於人，牠們是家庭空間的一部分</p><br>
+
+                                    <h1>貓不屬於人，牠們是家庭空間的一部分</h1><br>
                                 </div>
                             </div>
                         </aside>
