--- a/Final/index.html
+++ b/Final/index.html
@@ -83,9 +83,15 @@
                         </aside>
                     </header>
                     <br>
-                    <h3><button style="background: linear-gradient(#fe9f40,#e5d6c7,#111010);border-color:#f7a014"><a href="smile.html" style="color:#000000;">第2頁  </a></button> <a href="neko.html" style="color:#000000;">第3頁  </a> <a href="koko.html" style="color:#000000;">第4頁  </a>                        </h3>
-                    <h3></h3>
-                    <h3></h3>
+                    <li class="list-inline-item ">
+
+                        <ul class="subMenu">
+                            <li><button style="background: linear-gradient(#fe9f40,#e5d6c7,#d1ee2c);border-color:#f7a014"><a href="smile.html" style="color:#000000;">第2頁  </a></button>
+                                <button style="background: linear-gradient(#fe9f40,#e5d6c7,#d1ee2c);border-color:#f7a014"><a href="neko.html" style="color:#000000;">第3頁  </a></button>
+                                <button style="background: linear-gradient(#fe9f40,#e5d6c7,#d1ee2c);border-color:#f7a014"><a href="koko.html" style="color:#000000;">第4頁  </a>    </button> </li>
+                        </ul>
+                    </li>
+
                     <br>
                     <footer>
                         <aside>
