--- a/Final/koko.html
+++ b/Final/koko.html
@@ -43,10 +43,14 @@
 </head>
 
 <body>
+    <li class="list-inline-item ">
 
-    <h1><a href="index.html">1頁</a></h1>
-    <h1><a href="smile.html">2頁</a></h1>
-    <h1><a href="neko.html">3頁</a></h1>
+        <ul class="subMenu">
+            <li><button style="background: linear-gradient(#fe9f40,#e5d6c7,#d1ee2c);border-color:#f7a014"><a href="index.html" style="color:#000000;">第1頁  </a></button>
+                <button style="background: linear-gradient(#fe9f40,#e5d6c7,#d1ee2c);border-color:#f7a014"><a href="smile.html" style="color:#000000;">第2頁  </a></button>
+                <button style="background: linear-gradient(#fe9f40,#e5d6c7,#d1ee2c);border-color:#f7a014"><a href="neko.html" style="color:#000000;">第3頁  </a>    </button> </li>
+        </ul>
+    </li>
 
 
     <br>
