--- a/Final/neko.html
+++ b/Final/neko.html
@@ -71,7 +71,7 @@
 
                                 <ul>
                                     <li><a href="https://www.youtube.com/watch?v=2DADGpl_E4M">電影解說</a></li>
-                                    <li>心得：</li>
+                                    <li>心得：貓咪能帶給人希望與勇氣，人能給貓咪溫暖與家，所以我們要珍惜貓咪~珍惜與貓咪在一起的時光。</li>
                                     <div class="content">
                                         <div class="title">使用者留言~喵</div>
                                         <div class="message_box" id="messageBox"></div>
@@ -100,6 +100,7 @@
                                 <div style="background: linear-gradient(#fe9f40,#ffffff);">
 
                                     <h1>貓咪柔情似水的一聲喵，溫暖了滿心房</h1><br>
+                                    <iframe width="560" height="315" src="https://www.youtube.com/embed/ICD8Jb3l5S0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                                 </div>
                             </div>
                         </aside>
