--- a/Final/smile.html
+++ b/Final/smile.html
@@ -101,7 +101,7 @@
                                     <div style="background: linear-gradient(#fe9f40,#ffffff);">
 
                                         <h1>你可以養狗當寵物。但對貓來說，人才是寵物，因為人類是種極有用的動物</h1><br>
-
+                                        <iframe width="560" height="315" src="https://www.youtube.com/embed/j-YmQn3g8MU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                                     </div>
                                 </div>
                             </aside>
